<?xml version="1.0"?>
<package>
    <name>armor</name>
    <version>0.1.0</version>
    <description>ROS service interface for aMOR</description>

    <maintainer email="alessio.capitanelli@gmail.com">Alessio Capitanelli</maintainer>
    <author email="alessio.capitanelli@gmail.com">Alessio Capitanelli</author>
    <url type="website">https://github.com/EmaroLab</url>
    <license>GPLv2</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>armor_msgs</build_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>multi_ontology_reference</build_depend>
    <run_depend>armor_msgs</run_depend>



    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>